--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,4 +1,4 @@
-@import './normalize.css';
+@import "./normalize.css";
 
 /* 选择根元素 ‘html’ */
 :root {
@@ -20,8 +20,8 @@
 }
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
-    'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
+    "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   user-select: none; /*禁止用户鼠标在页面上选中文字/图片等*/
   -webkit-tap-highlight-color: transparent;
   /* webkit是苹果浏览器引擎，tap点击，highlight背景高亮，color颜色，颜色用数值调节 */
@@ -37,7 +37,7 @@ a {
 
 .clear-fix::after {
   clear: both;
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 0;
